--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.3"
   - "3.4"
 install:
   - pip install -r requirements.txt
   - pip install coverage python-coveralls
-script: nosetests tests/unit --cover-erase --with-coverage --cover-package skew
+script: nosetests tests/unit --cover-erase --with-coverage --cover-package killbill
 after_success: coveralls
