--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coverage python-coveralls
-script: nosetests tests/unit --cover-erase --with-coverage --cover-package skew
+script: nosetests tests/unit --cover-erase --with-coverage --cover-package details
 after_success: coveralls
